fixed alignment issues in navbar header

--- a/src/main/resources/public/css/style_2.css
+++ b/src/main/resources/public/css/style_2.css
@@ -200,6 +200,10 @@ vertical>.btn {
 	position: fixed;
 }
 
+#logo {
+	style=padding-left: 22%;
+}
+
 .custom-select {
 	background: #fff;
 }
